Refactor and enhance Google Search Console CLI
- Removed FQCNBeanNameGenerator class as it was redundant.
- Updated Format enum to return the name without converting to lowercase.
- Refactored FullyQualifiedClassNameBeanNameGenerator to improve bean name generation logic.
- Changed ResponseWriter methods from protected to private for better encapsulation.
- Simplified WebmastersCommandRunner by removing unnecessary annotations and restructuring command execution.
- Enhanced QueryCommand with parameter validation and improved error handling.
- Updated SubmitCommand and AddCommand to use consistent formatting and validation.
- Improved ListCommand and DeleteCommand constructors for better dependency injection.
- Added tests for new functionalities and improved existing test cases for better coverage and reliability.